correct: z-index BackToTopButton, width Footer. Add vars to sidebar

--- a/src/app/styles/variables/global.scss
+++ b/src/app/styles/variables/global.scss
@@ -59,6 +59,8 @@
   // Размер сайдбара
   --sidebar-width: 80px;
   --sidebar-collapsed-width: 70px;
+  --sidebar-padding: 20px;
+  --sidebar-full-width: calc(var(--sidebar-width) + var(--sidebar-padding));
 
   // Размер сайдбара профиля
   --profile-sidebar-height: 279px;
