--- a/src/shared/ui/BackToTopButton/BackToTopButton.module.scss
+++ b/src/shared/ui/BackToTopButton/BackToTopButton.module.scss
@@ -5,7 +5,7 @@
   transform: rotate(180deg);
   color: var(--primary-color);
   transition: all 0.5s;
-  z-index: 10;
+  z-index: var(--overlay-index);
 
   & svg {
     text-align: center;
